Archive2/58/f0b607d852ab15/output
main.cpp: In function 'void fun()':
main.cpp:22:13: error: invalid operands of types 'float' and 'void' to binary 'operator+'
         sum += vec.pop_back();
             ^
main.cpp:22:13: error:   in evaluation of 'operator+=(float, void)'
main.cpp:25:31: error: 'data' was not declared in this scope
         for (auto & element : data) {
                               ^
main.cpp:26:13: error: 'count' was not declared in this scope
             count += element;
             ^
main.cpp: In function 'void fun2()':
main.cpp:42:13: error: invalid operands of types 'float' and 'void' to binary 'operator+'
         sum += vec.pop_back();
             ^
main.cpp:42:13: error:   in evaluation of 'operator+=(float, void)'
